# bootleg-dotnet

./: .gitattributes  README.md  Readme.md  azure-pipelines.yml
samples/: .gitignore
samples/AOT.CPP/: build.sh
samples/AOT.Linkage/: build-csc.sh
samples/AOT.Test.CoreLib/: Program.cs  build.sh
samples/dnb/: .gitignore  Readme.md
samples/dnb/AOT.CPP/: Program.cs
samples/dnb/AOT.Linkage/: Program.cs  build-ilc.sh
samples/dnb/AOT.Reflection.Serialization/: Program.cs
samples/dnb/AOT.Reflection.Simple/: Program.cs
samples/dnb/R2R.Vectorisation/: Program.cs
samples/serverless/: Readme.md  build.sh  call.sh  start.sh
samples/serverless/App/: App.csproj
samples/serverless/Host/: Program.cs  Proxy.cs  Startup.cs
src/: Dockerfile  NuGet.Config  build.sh
src/patch/: README.md
src/patch/CoreDisTools/: README.md
src/patch/ObjWriter/: README.md  llvm.patch
src/patch/corert/: README.md  corert.patch
src/patch/corert/ObjWriter/: Microsoft.DotNet.ObjectWriter.nuspec
src/patch/llilc/CoreDisTools/: CMakeLists.txt
src/tools/: corerun  csc  getfx  getfxn  ilc  ildasm
tests/App/: App.cs  build-dnb.sh  build-manual.sh  build.sh
tests/ConsoleApp/: ConsoleApp.csproj
tests/Dnb/: build.sh
